[metadata]
name = waiting
classifiers =
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
summary = Utility for waiting for stuff to happen
description-file =
    README.rst
description-content-type = text/markdown
license = BSD3
author = Rotem Yaari
author_email = vmalloc@gmail.com
url = https://github.com/vmalloc/waiting

[extras]
testing =
    pytest
    pyforge

[tool:pytest]
testpaths = tests
